[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "scott-guard"
module = "scott_guard"
author = "Jesse London"
author-email = "jesselondon@gmail.com"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: System :: Archiving",
]

keywords = "google, keep, notes, evernote, joplin, enex"
requires-python = ">=3.8"

[tool.flit.scripts]
scott-guard = "scott_guard:main"

[tool.flit.sdist]
exclude = [".gitignore"]
